--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 
 <h4>Links</h4>
 <ul>
-<li>Github</li>
-<li>Youtube</li>
-<li>Spotify</li>
+<li><a href="https://github.com/jmoore180/WebPro">Github Repository</a></li>
+<li><a href="https://www.youtube.com/">Youtube</a></li>
+<li><a href="https://schoolwires.henry.k12.ga.us/lhs">Highschool webpage</a></li>
 </ul>
 </body>
 </html>
